<resources>
    <string name="app_name">eAttendance</string>

    <string name="faculty_name">Faculty</string>
    <string name="action_settings">Settings</string>
    <string name="appbarimg">appbarimg</string>
    <string name="hintname">Name</string>
    <string name="hintaddress">Address</string>
    <string name="hintemail">Email</string>
    <string name="hintmobile">Mobile Number</string>
    <string name="hintpassword">Password</string>
    <string name="hintconfirm">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="emailhint">Email</string>
    <string name="passwordhint">Password</string>
    <string name="loginhint">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="log_out">Log out</string>
    <string name="menu_icon">menu_icon</string>
    <string name="post_http">POST HTTP</string>
    <string name="get_http">GET HTTP</string>
    <string name="tvrequest">request</string>
    <string name="etname">Name</string>
    <string name="etemail">Email</string>
    <string name="passhint">Password</string>
    <string name="authenticating">Authenticating...</string>
    <string name="btnview_faculty">View Faculty</string>
    <string name="titletv">Title:</string>
    <string name="initialstv">Initial:</string>
    <string name="majortv">Major:</string>
    <string name="h_o_dtv">H.O.D:</string>
    <string name="facultytv">Faculty:</string>
    <string name="facultyimg">facultyimg</string>
    <string name="programmetv">Programme:</string>
    <string name="faculties_label">Faculties</string>
    <string name="departments_label">Departments</string>
    <string name="units_label">Units</string>
    <string name="scannerlabel">Scanner</string>
    <string name="finishbtn">Finish</string>
    <string name="uploadtv">Upload</string>
    <string name="scantv">Scan</string>
    <string name="downloadtv">Download</string>
    <string name="profiletv">Profile</string>
    <string name="uploadicon">uploadicon</string>
    <string name="scanicon">scanicon</string>
    <string name="profileicon">profileicon</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="departmenttv">Department:</string>
    <string name="emailtv">Email:</string>
    <string name="passwordtv">Old Password:</string>
    <string name="id_numbertv">ID number:</string>
    <string name="edit_profilelabel">Edit profile</string>
    <string name="profilelabel">Profile</string>
    <string name="nametv">Name:</string>
    <string name="cancelbtn">Cancel</string>
    <string name="savebtn">Save</string>
    <string name="new_ip">IP address</string>
    <string name="change_ip">Change ip</string>
    <string name="changeiplabel">Change IP</string>
    <string name="coursetv">Course:</string>
    <string name="leveltv">Level:</string>
    <string name="yearsemlabel">Year and Sem</string>
</resources>
