<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6f6f6"
    tools:context=".Edit_profile">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:text="@string/departmenttv"
                    android:textColor="@color/material_blue_grey_90"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/dept"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="dept"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/primary_darker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:text="@string/nametv"
                    android:textColor="@color/material_blue_grey_90"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/primary_darker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:text="@string/emailtv"
                    android:textColor="@color/material_blue_grey_90"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/primary_darker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:text="@string/passwordtv"
                    android:textColor="@color/material_blue_grey_90"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/primary_darker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:text="New password:"
                    android:textColor="@color/material_blue_grey_90"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/newpass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/primary_darker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:text="Confirm password:"
                    android:textColor="@color/material_blue_grey_90"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/confirmpass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:textSize="16sp" />
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/rounded_buttons"
                    android:backgroundTint="#ff2525"
                    android:onClick="cancel"
                    android:text="@string/cancelbtn"
                    android:textColor="@color/white"
                    android:typeface="serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/rounded_buttons"
                    android:backgroundTint="#ABE316"
                    android:onClick="save"
                    android:text="@string/savebtn"
                    android:textColor="@color/white"
                    android:typeface="serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>